Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67126

too wide size hint of QDoubleSpinBox when setting to mode "NoButtons"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.12.0 Alpha
    • 5.9.4, 5.10.1, 5.11.0 Beta 2
    • Widgets: Layout
    • None
    • Tested on Windows and observed on Linux
    • 6e8ac905397bf3067631c495e568471b4f908f37

      When configuring a QDoubleSpinBox (or QSpinBox) not to have buttonSymbols the SizeHint stays the same as if these buttons are still present. So at the right (or left) of such a SpinBox there will be always unused white space.

      Expected behavior would be that the layout of the SpinBox will shrink horizontally by the width of the (now not present) buttons.

        1. Qt_Bug.jpg
          16 kB
          Eltam
        2. qtbug_67126.tgz
          1 kB
          Christian Ehrlicher
        3. qtbug67126.zip
          2 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            etlam Eltam
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes