QAbstractSpinBox: honor QAbstractSpinBox::NoButtons in sizeHint()

QCommonStyle::sizeFromContents() did not check if a spinbox has buttons
or not and returned a to wide width when no buttons are displayed.

Task-number: QTBUG-67126
Change-Id: I9f97a31a89a0986023316b02e11017e620c0f614
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@qt.io>